# seq-photo-compression

./: .gitignore  DIFF_COMPRESSION_ALGORITHM.md  README.md  mise.toml  pyproject.toml  spc.py  spc_motion.py
.github/workflows/: check.yml
src/seq_photo_compression/: __init__.py  archive.py  cli.py  codecs.py  errors.py  external.py  motion.py  nikon_lossless.py  raw_io.py  tiff.py
tools/: measure_residual_jxl.cpp  spc_motion_residual.cpp
