[project]
name = "seq-photo-compression"
version = "0.1.0"
description = "Sequential NEF compression experiment"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.0",
    "opencv-python>=4.10",
]

[project.scripts]
spc = "seq_photo_compression.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "radon>=6.0.1",
    "ruff>=0.12.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/seq_photo_compression"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.format]
quote-style = "double"
